eks-cluster/k8s/ingress-network.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "app.domain.com"
      http:
        paths:
        - pathType: Prefix
          path: "/app"
          backend:
            service:
              name: voting-svc
              port:
                number: 80

    - host: "app.domain.com"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: wordpress-svc
              port:
                number: 80
